--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="featured-project">
                     <div class="project-header">
                         <span class="project-label">Proyecto Destacado</span>
-                        <h3 class="project-title">Proyecto Z</h3>
-                        <p class="project-subtitle">Aventura y Supervivencia</p>
+                        <h3 class="project-title">Timelapse - Kunai</h3>
+                        <p class="project-subtitle">Clip rápido</p>
                     </div>
                     <div class="hero-video-container">
                         <video 
@@ -68,7 +68,7 @@
                             playsinline
                             class="hero-video"
                             poster="images/videos/proyecto-z-poster.jpg">
-                            <source src="videos/ProyectoZ.mp4" type="video/mp4">
+                            <source src="videos/modelo2.mp4" type="video/mp4">
                             Tu navegador no soporta videos.
                         </video>
                         <div class="video-overlay" id="videoOverlay">
@@ -78,18 +78,14 @@
                         </div>
                         <div class="project-info-overlay">
                             <div class="tech-stack">
-                                <span class="tech-tag">Unity</span>
-                                <span class="tech-tag">C#</span>
+                                <span class="tech-tag">Blender</span>
+                                <span class="tech-tag">Clip</span>
                                 <span class="tech-tag">3D</span>
-                            </div>
-                            <div class="project-status">
-                                <span class="status-indicator active"></span>
-                                <span class="status-text">En Desarrollo</span>
                             </div>
                         </div>
                     </div>
                     <div class="project-description">
-                        <p>Un juego de supervivencia en tercera persona donde los jugadores deben sobrevivir en un mundo post-apocalíptico lleno de desafíos y misterios por descubrir.</p>
+                        <p>Video de proceso acelerado del modelado y texturizado de un Kunai en blender.</p>
                     </div>
                 </div>
             </div>
@@ -496,7 +492,7 @@
                     </div>
 
                     <div class="social-links">
-                        <a href="https://www.instagram.com/lisandrodev/" class="social-link instagram" title="Instagram">
+                        <a href="https://www.instagram.com/godzcelrsdev/" class="social-link instagram" title="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
                         <a href="https://godzcelrs.itch.io/" class="social-link itch" title="Itch.io">
@@ -504,6 +500,12 @@
                         </a>
                         <a href="#" class="social-link discord" title="Discord (Próximamente)">
                             <i class="fab fa-discord"></i>
+                        </a>
+                        <a href="https://www.twitch.tv/godzcelrs" class="social-link twitch" title="Twitch" target="_blank">
+                            <i class="fab fa-twitch"></i>
+                        </a>
+                        <a href="https://www.youtube.com/@Godzcelrs" class="social-link youtube" title="YouTube" target="_blank">
+                            <i class="fab fa-youtube"></i>
                         </a>
                         <a href="Godzcelrs@gmail.com" class="social-link email" title="Email">
                             <i class="fas fa-envelope"></i>
